syntax = "proto3";

package bbh;

service GameService {
    rpc EventStream (stream EventStreamRequest) returns (EventStreamResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message EventStreamRequest {
    oneof event {
        KillEvent kill = 1;
        EarningsEvent earnings = 2;
        PlayerInfoEvent player_info = 3;
    }
}

message EventStreamResponse {
}

message KillEvent {
    string killer = 1;
    string victim = 2;
    string cause = 3;
}

message EarningsEvent {
    string user = 1;
    int64 amt = 2;
}

message PlayerInfoEvent {
    string user = 1;
    EventType event_type = 2;
    int64 current_bounty = 3;
    int32 current_kills = 4;
    int32 current_deaths = 5;
    enum EventType{
        HEARTBEAT = 0;
        DISCONNECT = 1;
    }
}

message GetUserRequest {
    string pubkey = 1;
}

message GetUserResponse{
    User user = 1;
}

message User {
    string name = 1;
    string pubkey = 2;
}

